Support for Horn of the Abyss

--- a/Landscape/CMakeLists.txt
+++ b/Landscape/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCE_FILES
 set(HEADER_FILES
 	game_mod/asm_helper.h
 	game_mod/battlefield.hpp
+	game_mod/hota_terrain.hpp
 	game_mod/img_loader.hpp
 )
 
@@ -65,13 +66,18 @@ set(RESOURCE_FILES
 
 set(IMAGE_FILES
 	img/CmBkCFUg.bmp
+	img/CmBkCstUg.bmp
 	img/CmBkDesUg.bmp
 	img/CmBkDkUg.bmp
 	img/CmBkDrUg.bmp
+	img/CmBkDunUg.bmp
 	img/CmBkEFUg.bmp
 	img/CmBkFFUg.bmp
+	img/CmBkFGUg.bmp
+	img/CmBkFGrUg.bmp
 	img/CmBkGrUg.bmp
 	img/CmBkHGUg.bmp
+	img/CmBkIceUg.bmp
 	img/CmBkLPUg.bmp
 	img/CmBkLkUg.bmp
 	img/CmBkLvUg.bmp
@@ -83,12 +89,20 @@ set(IMAGE_FILES
 	img/CmBkRkUg.bmp
 	img/CmBkSnUg.bmp
 	img/CmBkSwUg.bmp
+	img/CmBkWlUg.bmp
 	img/SgCFBack.bmp
+	img/SgCFMoat.bmp
 	img/SgCFUgBk.bmp
 	img/SgCsUgBk.bmp
+	img/SgCurBack.bmp
+	img/SgCvUgBk.bmp
+	img/SgDnCGMlip.bmp
+	img/SgDnRkMlip.bmp
 	img/SgDnSfBk.bmp
 	img/SgElUgBk.bmp
 	img/SgFFBack.bmp
+	img/SgFaMoatUg.bmp
+	img/SgFaUgBk.bmp
 	img/SgFrUgBk.bmp
 	img/SgInUgBk.bmp
 	img/SgNcUgBk.bmp
