Support for Horn of the Abyss 1.8.0

--- a/Landscape/CMakeLists.txt
+++ b/Landscape/CMakeLists.txt
@@ -90,6 +90,7 @@ set(IMAGE_FILES
 	img/CmBkSnUg.bmp
 	img/CmBkSwUg.bmp
 	img/CmBkWlUg.bmp
+	img/SgBwUgBk.bmp
 	img/SgCFBack.bmp
 	img/SgCFMoat.bmp
 	img/SgCFUgBk.bmp
